--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,12 @@
   </div>
 </div>
 
+<div>
+  <u>Rem :</u>
+  <div>Il faut ici faire un detectChanges() dans le ngAfterViewInit car on utilise container.opened dans le template qui est redéfini à true à l'initialisation</div>
+  <div>On peut aussi déclarer une variable state qui sera mise à jour avec la valeur renvoyée par l'événement openedChange qui correspond à l'état ouvert ou fermé</div>
+</div>
+
 <hr>
 
 <h2>Cas classique</h2>
