--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
   <u>Rem :</u>
   <div>Il faut ici faire un detectChanges() dans le ngAfterViewInit car on utilise container.opened dans le template qui est redéfini à true à l'initialisation</div>
   <div>On peut aussi déclarer une variable state qui sera mise à jour avec la valeur renvoyée par l'événement openedChange qui correspond à l'état ouvert ou fermé</div>
+  <i>Créer un événement associé à l'ouverture et un autre à la fermeture ? (cf mat expansion panel)</i>
 </div>
 
 <hr>
